team/output/BD_00_00/2/1/op.txt
  File "/home/ubuntu/test-bigdata/adminmgr/media/code/A2/python/task/pr_IKHdUKW.py", line 103
    else:
    ^
IndentationError: expected an indented block
